# tauri-vue-app

./: .env.development  .gitmessage.txt  README.md  debug.md  debug_css.py  index.html  mock_data.sql  optimize_fonts_v2.py  optimize_noto_robust.py  package-lock.json  package.json  pnpm-lock.yaml  process_fonts.py  vite.config.js  需求描述.txt
doc/: README.md
doc/epic/: E1-auth-session-foundation.md  E2-account-payment-flow.md  E3-mode-gating-and-ui-integration.md  E4-multi-user-member-isolation.md  E5-member-management-local-operations.md  E6-cloud-member-source-and-member-scoped-settings.md  E7-ocr-analysis-dual-api-routing.md
doc/status/: E4-联调验收脚本.md  feature-done.md  todo-list.md
docs/: Git分支规范.md  MySQL建表SQL草案.md  SpringBoot模块划分与代码结构.md  V2版本功能需求说明.md  Vue3客户端对接示例.md  产品需求说明书.md  前端对接API清单.md  前端对接API示例.md  数据库表设计.md  服务端接口设计.md  桌面客户端对接文档.md  桌面端安全接入实现文档.md  跨域请求.md
plan/: architecture.md  features-done.md  progress_list.md  requirement.md  todo-list.md  will-do.md
src/: App.vue  main.js  tray.js
src-tauri/: 2  Cargo.toml  check_final.txt  check_output.txt  metadata.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs
src-tauri/src/commands/: ai.rs  config.rs  file.rs  indicator.rs  member.rs  mobile.rs  mod.rs  ocr.rs  project.rs  provider.rs  record.rs  scope.rs  system.rs  trend.rs
src-tauri/src/services/: http_client.rs  mobile_server.rs  mod.rs
src/assets/: main.css
src/components/: ImageEditor.vue  (+1 more)
stitch/: AIQA.html  anlysis.html  index.html  model-service.html  setting.html  sidebar-user-area.html
(+54 files in other folders)
