[package]
name = "tauri-vue-app"
version = "1.0.2"
description = "Health Guard - 个人健康管理系统"
authors = ["guoqiang"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.92.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_vue_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "HealthMonitor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-log = "2.0.0"
tauri-plugin-dialog = "2"

# 健康管理系统新增依赖
rusqlite = { version = "0.34", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "stream", "socks"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
futures-util = "0.3"
zip = "7.4.0"
walkdir = "2.5.0"
tauri-plugin-fs = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
